slack.user.css
/* Navy blue sidebar */
#col_channels_bg,
#col_channels {
  background: #313947 !important;
}

#team_menu,
#user_menu {
  background: #242b37 !important;
  border-color: #1a1f28 !important;
}

#col_channels ul li.channel.active a.channel_name,
#col_channels ul li.group.active a.group_name,
#col_channels ul li.member.active a.im_name {
  background: #fff !important;
  color: #313947 !important;
  text-shadow: none !important;
}

.channels_list_holder ul li a:hover {
  background: #242b37 !important;
}

.channels_list_holder ul,
.channels_list_holder ul li a,
.channels_list_holder h2,
.list_more,
.channels_list_holder ul li a .prefix { 
  color: #babbbe !important;
}

.list_more {
  border-bottom-color: #babbbe !important;
}

/* Different header */
#header {
  background-color: #f5f5f5 !important;
}

#channel_members_toggle {
  bottom: auto !important;
  right: auto !important;
  left: 246px !important;
  top: 10px !important;
}

#active_channel_name .name {
  padding-left: 226px !important;
}

/* Remove red "New messages" divider */
#msgs_unread_divider { display: none !important; }
/* Remove unread notification bar */
#messages_unread_status { display: none !important; }
/* Remove "Someone is typing" */
#typing_text { display: none !important; }
/* Remove "New day" divider */
.light_theme .day_divider { display: none !important; }
/* Remove welcome display area */
#end_div { display: none !important; }

/* Different whitespace and border dividers */
.light_theme .message {
  position: relative !important;
  padding-left: 200px !important;
  padding-top: 10px !important;
  padding-bottom: 10px !important;
  margin: 0 !important;
}

.light_theme .message.divider {
  border-top: 1px solid #ededed !important;
  margin: 0 !important;
}

.light_theme .message.divider + .message:not(.divider) {
  margin-top: -10px !important;
  padding-top: 0 !important;
}

/* Different layout for messages */
.light_theme .message .member_image,
.light_theme .message_sender,
.light_theme .message .timestamp,
.light_theme .message .message_star_holder,
.light_theme .message .msg_actions {
  position: absolute !important;
}

.light_theme .message .member_image {
  opacity: 1 !important;
  -o-transform: scale(0.88) !important;
  -moz-transform: scale(0.88) !important;
  -webkit-transform: scale(0.88) !important;
  transform: scale(0.88) !important;
}

.light_theme .message_sender {
  left: 44px !important;
}

/* No idea what this is */
.light_theme .copy_only { display: none !important; }

/* Putting timestamp and message icons on the right */
.light_theme .message .timestamp {
  right: 20px !important;
  left: auto !important;
  top: 11px !important;
  white-space: nowrap !important;
}

.light_theme .message.divider + .message:not(.divider) .timestamp {
  top: 3px !important;
  right: 25px !important;
}

.light_theme .message .message_star_holder,
.light_theme .message .msg_actions {
  top: 7px !important;
}

.light_theme .message.divider + .message:not(.divider)  .message_star_holder,
.light_theme .message.divider + .message:not(.divider) .msg_actions {
  top: 0 !important;
}

.light_theme .message .message_star_holder {
  right: 60px !important;
  left: auto !important;
}

.light_theme .message .msg_actions {
  right: 86px !important;
}

/* Wrangling image previews */
.light_theme .message .message_star_holder + br,
.light_theme .msg_inline_img_holder + .meta,
.light_theme .msg_inline_img_holder + .meta + br {
  display: none !important;
}

/* Wrangling attachments */
.inline_attachment,
.inline_attachment .attachment_title {
  font-size: 11px !important;
  line-height: 16px !important;
}

.inline_attachment .inline_attachment_wrapper {
  display: inline-block !important;
  background: #f5f5f5 !important;
  padding: 2px 3px !important;
}

.inline_attachment .attachment_bar { display: none !important; }

#msgs_div div.dynamic_content_max_width,
.inline_attachment .content,
.special_formatting_quote .content,
.inline_attachment .content {
  width: auto !important;
  padding: 0 !important;
}

/* Wrangling code blocks */
pre.special_formatting {
  margin-right: 200px !important;
}

/* Not as bold */
.light_theme .message_sender,
.light_theme .file_reference .file_name {
  font-weight: 600 !important;
}

/* Removing useless mentions */
.inline_attachment .mention,
.message_content a .mention {
  background: transparent !important;
}

